# Dynamic-Distributed-Computing

./: .gitignore  CMakeLists.txt  client.py  main.py  pyproject.toml  server.py  spawner.c
